--- a/src/app/modules/loan/loan-type/loan-type.component.html
+++ b/src/app/modules/loan/loan-type/loan-type.component.html
@@ -1,9 +1,9 @@
 <ngx-componentsheader
   pageName="Loan Type"
-  [requiredButton]="[]"
+  [requiredButton]="[{name:'newtype', label:'Add New'}]" (buttonClick)="createLoanType()"
 ></ngx-componentsheader>
 
-<div>
+<div *ngIf="dataCounter < 1">
   <nb-card>
       <nb-card-body>
         <form #loanType="ngForm" name="loanType">
@@ -150,6 +150,17 @@
             </div>
         </div>
 
+        <div class="form-group row">
+          <div class="col-sm-3">
+            <label for="">Custom Question</label>
+          </div>
+
+          <div class="col-sm-6">
+            <ngx-wysisyg-input [(value)]="loanTypeModel.customQuestion" style="padding-left: -10px;" ></ngx-wysisyg-input>
+          </div>
+
+        </div>
+
 
         <div class="form-group row">
           <div class="col-sm-3">
@@ -157,7 +168,7 @@
           </div>
 
           <div class="col-sm-6">
-            <ngx-wysisyg-input style="padding-left: -10px;" ></ngx-wysisyg-input>
+            <ngx-wysisyg-input [(value)]="loanTypeModel.description" style="padding-left: -10px;" ></ngx-wysisyg-input>
           </div>
 
         </div>
@@ -177,4 +188,13 @@
         </form>
       </nb-card-body>
   </nb-card>
+</div>
+
+<div *ngIf="dataCounter > 0">
+<nb-card>
+  <nb-card-body>
+    <ngx-tableheader></ngx-tableheader>
+      <ngx-tablecomponent [loading]='loading' [tableColum]="loanTypesTable" [userData]='allLoanTypes' [actions]='tableActions' (actionClick)="tableActionClicked($event)"></ngx-tablecomponent>
+  </nb-card-body>
+</nb-card>
 </div>
