--- a/src/app/modules/career-succession/succession-dashboard/succession-dashboard.component.html
+++ b/src/app/modules/career-succession/succession-dashboard/succession-dashboard.component.html
@@ -58,7 +58,7 @@
        </div>
 
 
-       <div class="form-group row">
+       <!-- <div class="form-group row">
         <div class="col">
          <label>Purpose</label>
          <select type="text" name="purpose" #purpose="ngModel" [(ngModel)]="newSuccessionPlan.planJustification" disabled>
@@ -66,13 +66,13 @@
           <option value=""></option>
         </select>
         </div>
-       </div>
+       </div> -->
 
       <div class="form-group row" style="margin-top: 20px">
        <div class="col">
         <button nbButton status="primary" (click)="createSuccessionPlan()">Modify</button>
        </div>
       </div>
-  </div>
+  </div> 
   </ngx-side-modal>
 
