--- a/src/app/modules/loan/loan-request/loan-request.component.html
+++ b/src/app/modules/loan/loan-request/loan-request.component.html
@@ -64,22 +64,23 @@
                   <div class="col-sm-6">
                     <select class="form-control" name="loanType" [(ngModel)]="loanModel.loanTypeName">
                       <option value="">--Select Loan Type--</option>
-                      <option *ngFor="let myType of allloanTypes" [value]="myType.code">{{ myTpe.name }}</option>
+                      <option *ngFor="let myType of allLoanTypes" [value]="myType.code">{{ myTpe.name }}</option>
                     </select>
                   </div>
                 </div>
 
-                  <!-- <div class="form-group row">
+                  <div class="form-group row">
                     <div class="col-sm-3">
                       <label for="">Interest Type</label>
                     </div>
 
                     <div class="col-sm-6">
-                      <select class="form-control" name="loanType" [(ngModel)]="loanModel.">
+                      <select class="form-control" name="loanType" [(ngModel)]="loanModel.loanTypeName">
                         <option value="">--Select Interest Type--</option>
+                        <option value="1">Type One</option>
                       </select>
                     </div>
-                </div> -->
+                </div>
 
                 <div class="form-group row">
                   <div class="col-sm-3">
