--- a/src/app/components/multi-select/multi-select.component.html
+++ b/src/app/components/multi-select/multi-select.component.html
@@ -1,7 +1,5 @@
-{{selectedItems}}
-
 <ng-multiselect-dropdown
-  [placeholder]="'custom placeholder'"
+  [placeholder]="''"
   [settings]="dropdownSettings"
   [data]="dropdownList"
   [(ngModel)]="selectedItems"
