leave Holiday and Leave Entitlement

--- a/src/app/modules/employeemodule/managementexist/managementexist.component.html
+++ b/src/app/modules/employeemodule/managementexist/managementexist.component.html
@@ -90,8 +90,8 @@
                 </ngx-file-upload>
               </div>
               <div style="padding-left: 10px;display: flex;align-items: center;flex: auto;">
-                <img style="height: 20px; margin-right: 10px;" src="assets/icons/download.jpg" alt=""><span
-                  style="color: blue;">Download file</span>
+                <img (click)="downloadSampleFile()" style="height: 20px; margin-right: 10px;cursor: pointer;" src="assets/icons/download.jpg" alt=""><span
+                  style="color: blue;">Download Sample file</span>
               </div>
             </div>
 
