--- a/src/app/modules/career-succession/dashboard/dashboard.component.html
+++ b/src/app/modules/career-succession/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
       </span>
       </div>
       <div style="padding:5px">
-        <span class="header5-bold">567</span>
+        <span class="header5-bold">{{ planDataCount }}</span>
       </div>
      </div>
      </div>
@@ -59,7 +59,7 @@
      </div>
      </div>
      </nb-card>
-     
+
   </div>
 
 
