--- a/src/app/modules/career-succession/planning/planning.component.html
+++ b/src/app/modules/career-succession/planning/planning.component.html
@@ -86,6 +86,9 @@
           <div class="col">
             <label>Title</label>
             <input type="text" class="form-control" name="title" #title="ngModel" [(ngModel)]="newSuccessionPlan.planTitle" required>
+            <div *ngIf="title.invalid && (title.dirty || title.touched)" class="error">
+              <div *ngIf="title.errors.required">Title is required</div>
+            </div>
           </div>
         </div>
 
@@ -93,13 +96,19 @@
          <div class="col">
           <label>Employee</label>
           <input type="text" class="form-control" name="employee" #employee="ngModel" [(ngModel)]="newSuccessionPlan.holderId" required>
-         </div>
+          <div *ngIf="employee.invalid && (employee.dirty || employee.touched)" class="error">
+            <div *ngIf="employee.errors.required">Employee Name is required</div>
+          </div>
+        </div>
         </div>
 
         <div class="form-group row">
           <div class="col">
            <label>Position</label>
            <input type="text" class="form-control" name="position" #position="ngModel" [(ngModel)]="newSuccessionPlan.positionId" required>
+           <div *ngIf="position.invalid && (position.dirty || position.touched)" class="error">
+            <div *ngIf="position.errors.required">Position is required</div>
+          </div>
           </div>
          </div>
 
@@ -113,10 +122,13 @@
          <div class="form-group row">
           <div class="col">
            <label>Readiness to start</label>
-           <select type="text" class="custom-select" name="readiness" required>
+           <select type="text" class="custom-select" name="startDate" #startDate="ngModel" [(ngModel)]="newSuccessionPlan.startDate" required>
              <option value="">--Select--</option>
-             <option *ngFor="let readiness of readinessToStart" [value]="readiness.name">{{ readiness.title }}</option>
+             <option *ngFor="let myreadiness of readinessToStart" [value]="myreadiness.name">{{ myreadiness.title }}</option>
            </select>
+           <div *ngIf="startDate.invalid && (startDate.dirty || startDate.touched)" class="error">
+            <div *ngIf="startDate.errors.required">Readiness is required</div>
+          </div>
           </div>
          </div>
 
@@ -128,12 +140,15 @@
             <option value="">--Select--</option>
             <option *ngFor="let purpose of allPurposes" [value]="purpose.name">{{purpose.title}}</option>
           </select>
+          <div *ngIf="purpose.invalid && (purpose.dirty || purpose.touched)" class="error">
+            <div *ngIf="purpose.errors.required">Position is required</div>
+          </div>
           </div>
          </div>
 
         <div class="form-group row" style="margin-top: 20px">
          <div class="col">
-          <button nbButton status="primary" (click)="createSuccessionPlan()">Modify</button>
+          <button nbButton status="primary" (click)="createSuccessionPlan()">Create</button>
          </div>
         </div>
     </div>
