--- a/src/app/modules/career-succession/talent-pool/talent-pool.component.html
+++ b/src/app/modules/career-succession/talent-pool/talent-pool.component.html
@@ -36,9 +36,9 @@
         <div class="form-group row mydiv">
           <label for="Description" class="col-sm-3 col-form-label mylabel">Competency</label>
             <div class="col-sm-6 col-md-6 col-lg-6">
-              <select class="form-control" name="eligibleGrades">
+              <select class="form-control" name="competency" #competency="ngModel" [(ngModel)]="competencyRequirementModel">
                 <option value="">--Select Comptency--</option>
-                <option value="1">Competency 1</option>
+                <option *ngFor="let myCompetency of allCompetencies" [(value)]="myCompetency.id">{{ myCompetency.competencyTitle }}</option>
               </select>
           </div>
         </div>
