--- a/src/app/modules/employeemodule/hiringchecklist/hiringchecklist.component.html
+++ b/src/app/modules/employeemodule/hiringchecklist/hiringchecklist.component.html
@@ -140,6 +140,19 @@
                     <input type="text" nbInput fullWidth placeholder="Hire Date">
                   </div>
                 </div> -->
+
+                <div class="form-group row">
+                  <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Hire Date</label>
+                  <div class="col-sm-8">
+
+                    <ngx-date [(value)]='workData.hireDate' #dateofJoining name="hireDate" id="hireDate">
+                    </ngx-date>
+                    <div *ngIf="!validdating" class="error">
+                      <div> Date is required</div>
+                    </div>
+
+                  </div>
+                </div>
                 <div class="form-group row">
                   <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Date of joining</label>
                   <div class="col-sm-8">
@@ -197,13 +210,14 @@
                   <div class="col-sm-8">
 
                     <select placeholder="Select Gender" name="departmentId" #departmentId="ngModel"
-                      [(ngModel)]="InformationData.departmentId" required>
+                      [(ngModel)]="workData.departmentId" required>
                       <option value="">--Select Department---</option>
-                      <option *ngFor="let dept of allDepartment" [value]="dept.option_value">{{dept.option_text}}</option>
+                      <option *ngFor="let dept of allDepartment" [value]="dept.option_value">{{dept.option_text}}
+                      </option>
                     </select>
 
                     <div *ngIf="departmentId.invalid && (departmentId.dirty || departmentId.touched)" class="error">
-                      <div *ngIf="departmentId.errors.required">Gender is required</div>
+                      <div *ngIf="departmentId.errors.required">Department is required</div>
                     </div>
 
 
@@ -235,24 +249,24 @@
 
                   </div>
                 </div>
-                <!-- <div class="form-group row">
-                  <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Offer Letter</label>
+                <div class="form-group row">
+                  <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Work Email</label>
                   <div class="col-sm-8">
-                    <input rows="5" nbInput fullWidth placeholder="Offer Letter">
+
+                    <input type="text" nbInput fullWidth placeholder="Enter location" name="workEmail"
+                      #workEmail="ngModel" [(ngModel)]="workData.workEmail" required>
+                    <div *ngIf="workEmail.invalid && (workEmail.dirty ||workEmail.touched)" class="error">
+                      <div *ngIf="workEmail.errors.required"> location is required</div>
+                    </div>
+
                   </div>
                 </div>
-                <div class="form-group row">
-                  <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Offer Expires on</label>
-                  <div class="col-sm-8">
-                    <input rows="5" nbInput fullWidth placeholder="Offer Expires on">
-                  </div>
-                </div> -->
                 <div class="form-group row">
                   <div class="offset-sm-4 col-sm-8">
                     <button *ngIf="submitbtnPressed" nbButton status="primary" class="d-flex column">Processing &nbsp;
                       <i class="fa fa-spin fa-spinner"></i></button>
-                    <button type="submit" nbButton status="primary" *ngIf="!submitbtnPressed" [disabled]="!formvalid"
-                      (click)="proceedtoofferLetter()">Proceed</button>
+                    <button type="submit" nbButton status="primary" *ngIf="!submitbtnPressed"
+                      (click)="proceedtoofferLetter()" [disabled]="!formvalidation">Proceed</button>
                   </div>
                 </div>
               </form>
