--- a/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
+++ b/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
@@ -267,7 +267,6 @@
               </div>
             </div>
 
-
               <div class="form-group row">
                 <div class="col-sm-2 col-md-2 col-lg-2"></div>
                 <div class="col-sm-6 col-md-6 col-lg-6" >
@@ -282,7 +281,7 @@
                   <div class="col-sm-6 col-md-6 col-lg-6">
                     <select class="form-control" name="frequency" #frequency="ngModel" [(ngModel)]="disbursement.frequencyId" placeholder="Frequency">
                       <option value="" default>--Select Frequency--</option>
-                      <option *ngFor="let frequent of allFrequencies" value="frequent.id">{{frequent.name}}</option>
+                      <option *ngFor="let frequent of allFrequencies" [value]="frequent.id">{{frequent.name}}</option>
                     </select>
                   </div>
 
