--- a/src/app/modules/leave/leaveholidays/leaveholidays.component.html
+++ b/src/app/modules/leave/leaveholidays/leaveholidays.component.html
@@ -17,7 +17,8 @@
       <div modal-header>Add Leave Holiday</div>
       <div modal-body>
         <form #leavEntitlementForm="ngForm" name="leavEntitlementForm" id="leavEntitlementForm">
-          <div class="form-group">
+            <div class="row">
+            <div class="col-sm-12 form-group">
             <label for="Leave Type Name" style="font-size: small;font-weight: bold;">Holiday Date:</label>
             <ngx-date [(value)]='newleaveHolidays.holidayDate' #holidayDate
             name="holidayDate" id="holidayDate"></ngx-date>
@@ -31,7 +32,7 @@
             <label>Leave Year</label>
             <select class="form-control" #leaveYearId="ngModel"  id="leaveYearId" name="leaveYearId"  [(ngModel)]="newleaveHolidays.leaveYearId" required>
                 <option value="">--Select Year--</option>
-                <option *ngFor="let leaveyr of LeaveYear;" [value]="leaveyr.id">{{leaveyr.name}}</option>
+                <option *ngFor="let leaveyr of LeaveYear;" [value]="leaveyr.id">{{leaveyr.yearName}}</option>
             </select>
             <div *ngIf="leaveYearId.invalid && (leaveYearId.dirty || leaveYearId.touched)" class="error">
                 <div *ngIf="leaveYearId.errors.required">
@@ -39,16 +40,17 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 form-group">
+        <div class="col-sm-12 form-group">
             <label>Description</label>
             <textarea rows="5" class="form-control" placeholder="Enter Description" #description="ngModel"  id="description" name="description"  [(ngModel)]="newleaveHolidays.description"></textarea>
         
         </div>
+    </div>
         </form>
       </div>
       <div modal-actions class="d-flex"
         style="display: flex; flex-direction: row; justify-content: center; margin-top: 40px; margin-bottom: 60px;">
-        <button *ngIf="!submitbtnPressed" [disabled]="!formvalidate" nbButton status="primary"
+        <button *ngIf="!submitbtnPressed"  nbButton status="primary"
           (click)="createleaveHolidays()" class="d-flex column"><span *ngIf="!modificationStatus">Submit</span>
           <span *ngIf="modificationStatus">Modify</span>
         </button>
